src/main/java/org/example/utils/error/ValidationIngredientException.java
package org.example.utils.error;

public class ValidationIngredientException extends RuntimeException {
    public ValidationIngredientException(Throwable cause) {
        super(cause);
    }
}
